# lcao-simulation

./: CMakeLists.txt  GEMINI.md  README.md
include/: Camera.hpp  ElectronCloud.hpp  Nucleus.hpp  OpenCLManager.hpp  Physics.hpp  Shader.hpp  TextRenderer.hpp
shaders/: cloud.frag  cloud.vert  nucleus.frag  nucleus.vert  simple.vert  simulation.cl
src/: ElectronCloud.cpp  Nucleus.cpp  OpenCLManager.cpp  TextRenderer.cpp  main.cpp
